--- a/resources/assets/sass/index.sass
+++ b/resources/assets/sass/index.sass
@@ -959,10 +959,16 @@
 
     .page_index_info
       flex-direction: column
+      // font-size: 0
       .left,.right
         width: 100%
         padding: 15px
         height: auto
+        border: none
+        .infos
+          padding: 15px 20px
+          h2
+            font-size: 30px
         &:hover
           width: 100%
 
