--- a/resources/assets/sass/nav.sass
+++ b/resources/assets/sass/nav.sass
@@ -274,6 +274,9 @@ nav
     .navbar-nav
       .func_lang,.func_size
         display: none
+      &.navbar-right
+        width: auto
+        margin-right: 24px
 
   //---- when at top of the page
   +range_width(800px,3000px)
